<resources>
    <string name="app_name">Stocka</string>
    <string name="account">Account</string>
    <string name="mp_ventures">Mr Tunde</string>
    <string name="my_details">My Details</string>
    <string name="settings">Settings</string>
    <string name="faqs">FAQs</string>
    <string name="logout">Logout</string>
    <string name="stocka_all_">© 2021, Stocka. All rights reserved</string>
    <string name="products">Products</string>
    <string name="all_products">All Products</string>
    <string name="provisions">Provisions</string>
    <string name="kitchen">Kitchen</string>
    <string name="others">Others</string>
    <string name="product_Price">\u20A6%1$s</string>
    <string name="product_qty">Qty: %1$s</string>
    <string name="quickScan_price">Price: \u20A6%1$s</string>
    <string name="quick_scan_qty">Qty: %1$s</string>
    <string name="sell">Sell</string>
    <string name="intial_count_value">0</string>
    <string name="product_detail_price">\u20A6%1$s</string>
    <string name="product_detail_total_price">\u20A6%1$s</string>
    <string name="home_total_sales">\u20A6 %1$s</string>
    <string name="welcome_text">Welcome, %1$s</string>
    <string name="emptyStateTextView_home">Get Started <br />
        Add New Product to your Inventory</string>
<!--    <string name="todays_date_text">Today, <b>%1$s</b> </string>-->
    <string name="todays_date_text"><![CDATA[Today, <b>%1$s</b>]]></string>
    <string name="product_buying_price">Buying Price (\u20A6)</string>
    <string name="product_selling_price">Selling Price (\u20A6)</string>
    <string name="total_expenses_number">Today Expense, \u20A6 %1$s</string>


    <string-array name="expense_category">
        <item>Bills</item>
        <item>Payment</item>
        <item>Tax</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_purpose_message">Product %1$s</string>

</resources>