<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="680dp"
    android:background="@drawable/rounded"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/quickScanProduct_imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="60dp"
            tools:src="@drawable/indomitables_chicken_70g"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/quickScanProductName_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            tools:text="Indomie"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quickScanProduct_imageView" />

        <TextView
            android:id="@+id/quickScanProductPrice_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            tools:text="@string/quickScan_price"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quickScanProductName_textView" />

        <TextView
            android:id="@+id/quickScanProductQuantity_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/stocka_green"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quickScanProductPrice_textView"
            tools:text="@string/quick_scan_qty" />

        <ImageView
            android:id="@+id/quickScanRemoveQty_button"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="117dp"
            android:layout_marginTop="44dp"
            android:src="@drawable/ic_baseline_remove_circle_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quickScanProductQuantity_textView" />

        <ImageView
            android:id="@+id/quickScanAddQty_button"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="117dp"
            android:src="@drawable/ic_baseline_add_circle_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quickScanProductQuantity_textView" />

        <TextView
            android:id="@+id/quickScanSaleQty_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/intial_count_value"
            android:textColor="@color/black"
            android:textSize="48sp"
            app:layout_constraintEnd_toStartOf="@+id/quickScanAddQty_button"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toEndOf="@+id/quickScanRemoveQty_button"
            app:layout_constraintTop_toBottomOf="@+id/quickScanProductQuantity_textView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/quickScanSell_button"
            style="@style/TextAppearance.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="80dp"
            android:backgroundTint="@color/yellow"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:text="@string/sell"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>